# shadow-threads

./: .gitignore  LICENSE  PROJECT_PATHS.txt  README.md  docker-compose.yml  first_run.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
cli/: README.md  package-lock.json  package.json  tsconfig.json
cli/src/: index.ts
demo/: README.md
demo/demoA-task-state/: README.md  artifact.json  demo-state.json  run-demo.ps1  run-demo.sh  summary-artifact.json  workflow-summary.json  workflow.py
demo/demoB-workflow-debug/: README.md  broken_workflow.py  debug-state.json  failure-artifact.json  failure-report.json  run-debug.ps1  run-debug.sh  shadow.config.json  workflow-input.json
docs/: API.md  QUICKSTART.md  apply-contract.md  development.md  integration-patterns.md  reference.md  task-package.schema.v0.2.md
examples/: apply-report.v0.2.json  task-package.v0.2.json
extension/: build.js  manifest.json  options.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
extension/icons/: create_icons.js
extension/src/: background.ts  chatgptAdapter.ts  content.ts  options.ts  types.ts
extension/styles/: content.css
mcp/: README.md  pyproject.toml
mcp/examples/: live_validation.py
mcp/src/shadowthreads_mcp/: __init__.py  config.py  errors.py  server.py  tools.py
mcp/tests/: test_errors.py  test_tools.py
python-sdk/: README.md  pyproject.toml
python-sdk/examples/: live_validation.py
python-sdk/src/shadowthreads/: __init__.py  _http.py  client.py  config.py  errors.py  models.py
python-sdk/tests/: test_client.py  test_errors.py
server/: .env.example  Dockerfile  STATE_ALGEBRA.md  package-lock.json  package.json  pnpm-lock.yaml  test-proxy.js  tmp-check-snapshot.js  tmp-db-whoami.js  tsconfig.dev.json  tsconfig.json  vitest.config.ts
(+224 files in other folders)
