[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowthreads-mcp"
version = "0.1.0"
description = "Thin MCP server for the Shadow Threads Python SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.26.0,<2",
  "shadowthreads-sdk>=0.1.0",
]
authors = [
  { name = "OpenAI Codex" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.scripts]
shadowthreads-mcp = "shadowthreads_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shadowthreads_mcp = ["py.typed"]
