[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowthreads-sdk"
version = "0.1.0"
description = "Thin Python SDK for the Shadow Threads HTTP API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0,<3",
]
authors = [
  { name = "OpenAI Codex" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shadowthreads = ["py.typed"]
